--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div>
     <div class="hero"></div>
     <div class="content">
+<!--         fixed link  -->
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Desk with Pictures" />
             <h2>Search Engine Optimization</h2>
